
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.91

   * Fixed CENT action with multi-state object

   * Adjusting Z scaling for mouse

   * Better WYSIWYG: If they are set to zero, then the settings:
       mesh_radius, line_radius, ribbon_radius,  dot_radius, dash_radius 
     are now subordinated to:
       mesh_width, line_width, ribbon_width, dot_width, and dash_width.
     However, if changed to a non-zero value, they will take priority.

     This behavior provides better WYSIWYG for raytracing, but will break
     some scripts.

   * fixed map_new ...,gaussian,... command and added options
         gaussian_resolution
         gaussian_b_adjust
         gaussion_b_floor
      default "map_new name" now creates a 2 A electron density map using
      current atomic Q and B for direct comparison with experimental density

   * updated ray tracer to support edge oversampling -- Antialiased rendering
     is now SIGNIFICANTLY FASTER for simple scenes and is now enabled by
     default. Full scene supersampling is no longer necessary in most cases, but
     if activated, it will provide even better image quality.

     Antialias setting can now have values of 0-4:
       antialias 0: no antialiasing
       antialias 1: edge-oversampling (as per ray_oversample_cutoff)
       antialias 2: 2X full scene supersample plus edge oversampling
       antialias 3: 3X full scene supersample plus edge oversampling
       antialias 4: 4X full scene supersample plus edge oversampling

   * restored CRLFs on Windows versions of PyMOL so that
     python code can be viewed/edited with Notepad, etc.

   * added quiet parameter to alter and iterate commands
