@@ -2081,7 +2081,7 @@ void SettingInitGlobal(int alloc)
 
   SettingSet_f(I,cSetting_gaussian_b_floor,0.0F);
 
-  SettingSet_i(I,cSetting_sculpt_nb_skip,17);
+  SettingSet_i(I,cSetting_sculpt_nb_interval,17);
 
 }
 
