@@ -409,7 +409,7 @@ CSetting *SettingNewFromPyList(PyObject *list);
 #define cSetting_ray_oversample_cutoff       270
 #define cSetting_gaussian_resolution         271
 #define cSetting_gaussian_b_floor            272
-#define cSetting_sculpt_nb_skip              273
+#define cSetting_sculpt_nb_interval          273
 
 /* cSetting_INIT must always be last setting_index +1 */
 
