@@ -67,9 +67,13 @@ void ShakerAddLineCon(CShaker *I,int atom0,int atom1,int atom2);
 
 float ShakerGetPyra(float *v0,float *v1,float *v2,float *v3);
 
+/* the following fn's have been inlined in Sculpt.c  
 float ShakerDoDist(float target,float *v0,float *v1,float *d0to1,float *d1to0,float wt);
+*/
+
 float ShakerDoPyra(float target,float *v0,float *v1,float *v2,float *v3,
                    float *p0,float *p1,float *p2,float *p3,float wt);
+
 float ShakerDoDistLimit(float target,float *v0,float *v1,float *d0to1,float *d1to0,float wt);
 
 float ShakerDoLine(float *v0,float *v1,float *v2,
